--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                 <h3>🎮 Get Your FREE Game Concept Review</h3>
                 <p style="text-align: center; margin-bottom: 20px;">Tell me about your game idea. I'll send you a FREE development plan and quote (no commitment required).</p>
 
-                <form action="https://formspree.io/f/mrblzzve" method="POST" id="validationForm">
+                <form action="https://formspree.io/f/mzzvpdyw" method="POST" id="validationForm">
                     <div class="form-group">
                         <label for="name">Your Name:</label>
                         <input type="text" id="name" name="name" required>
