--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@
 
                 const price = this.querySelector('.price').textContent;
                 const budgetSelect = document.getElementById('budget');
-                const typeSelect = document.getElementById('website_type');
+                // const typeSelect = document.getElementById('website_type');
 
                 if (price.includes('150')) {
                     budgetSelect.value = '£100-200';
